public/examples/errors/missing-then.smol
BEGIN
READ(a);
IF TRUE WRITE(a); ELSE WRITE(a);
END